# genesis-sdlc

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  INTENT.md
builds/python/: CHANGELOG.md  pyproject.toml
builds/python/design/adrs/: ADR-001-package-structure.md  ADR-002-sdlc-graph-as-importable-template.md  ADR-003-traceability-enforcement.md  ADR-004-module-decomposition-and-build-scheduling.md  ADR-005-three-layer-install-architecture.md  ADR-006-test-version-sandboxing.md  ADR-007-integration-tests-user-guide-as-graph-assets.md  ADR-008-four-territory-model-and-bootstrap-boundary.md  ADR-009-engine-commands.md  ADR-010-test-structure-and-coverage.md  ADR-011-backlog-schema-and-commands.md  ADR-012-variant-and-projection-support.md
builds/python/src/genesis_sdlc/: RELEASE.md  SDLC_BOOTLOADER.md  __init__.py  backlog.py  install.py  sdlc_graph.py
builds/python/tests/: __init__.py  conftest.py  scenario_helpers.py  test_backlog.py  test_e2e_sandbox.py  test_gaps.py  test_installer.py  test_integration_graph_walk.py  test_live_fp_qualification.py  test_sdlc_graph.py
builds/python/uat_custody_sandbox/: CLAUDE.md
builds/python/uat_custody_sandbox/.ai-workspace/events/: events.jsonl
builds/python/uat_custody_sandbox/.claude/commands/: .genesis-installed  gen-iterate.md  gen-review.md
builds/python/uat_custody_sandbox/.genesis/: genesis.yml
builds/python/uat_custody_sandbox/.genesis/genesis/: __init__.py  __main__.py  bind.py  commands.py  fp_dispatch.py  schedule.py
builds/python/uat_custody_sandbox/.genesis/gtl/: __init__.py  core.py
builds/python/uat_custody_sandbox/.genesis/gtl_spec/: GTL_BOOTLOADER.md
builds/python/uat_custody_sandbox/.gsdlc/release/: SDLC_BOOTLOADER.md  active-workflow.json  (+1 more)
builds/python/uat_custody_sandbox/specification/: INTENT.md  feature_decomposition.md  requirements.md
(+460 files in other folders)
