[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "genesis_sdlc"
version = "0.1.3"
description = "Standard SDLC bootstrap graph as a GTL Package — built on abiogenesis."
requires-python = ">=3.11"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "../../.genesis", "../.."]
addopts = "-q"
markers = [
    "e2e: end-to-end sandbox tests — install into fresh directory and verify operational",
]
