[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "genesis_sdlc"
version = "1.0.0"
description = "Standard SDLC bootstrap graph as a GTL Package — built on abiogenesis."
requires-python = ">=3.11"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests", "../../.genesis", "../.."]
addopts = "-q -m 'not live_fp'"
markers = [
    "integration: integration and end-to-end sandbox tests",
    "live_fp: live F_P qualification tests (requires ANTHROPIC_API_KEY + Claude CLI)",
]
